--- a/partials/testLayout.html
+++ b/partials/testLayout.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="TestsCtrl">
+<div class="row" ng-controller="TestsCtrl" xmlns="http://www.w3.org/1999/html">
     <div class="col-xs-6" >
         <ul id="TestSelected">
             <li ui-draggable="true" drag="sTest"
@@ -8,12 +8,12 @@
                 {{sTest.test_name}}
             </li>
         </ul>
-
+        </br>
         <ul id="TestSelected">
             <li ui-draggable="true" drag="sTest1"
-                on-drop-success="dropSuccessHandler($event,$index,selectedTest)"
-                ui-on-Drop="onDrop($event,$data,selectedTest)"
-                ng-repeat="sTest1 in selectedTest track by $index">
+                on-drop-success="dropSuccessHandler1($event,$index,selectedTest1)"
+                ui-on-Drop="onDrop1($event,$data,selectedTest1)"
+                ng-repeat="sTest1 in selectedTest1 track by $index">
                 {{sTest1.test_name}}
             </li>
         </ul>
@@ -28,5 +28,5 @@
             </li>
         </ul>
     </div>
-    <!--<button ng-click="saveTest(selectedTest)">Save</button>-->
+    <!--<button ng-click="saveTest(selectedTest,selectedTest1)">Save</button>-->
 </div>
