--- a/partials/testLayout.html
+++ b/partials/testLayout.html
@@ -17,6 +17,10 @@
                 {{sTest1.test_name}}
             </li>
         </ul>
+        </br>
+        <!--<div ng-repeat="c in consorts">-->
+        <!--{{c.consort_name}}-->
+    <!--</div>-->
     </div>
     <div class="col-xs-6">
         <ul>
@@ -28,5 +32,6 @@
             </li>
         </ul>
     </div>
-    <!--<button ng-click="saveTest(selectedTest,selectedTest1)">Save</button>-->
+
+    <button ng-click="saveTest(selectedTest,selectedTest1)">Save</button>
 </div>
